# turma2

./: exemplo.txt  pyproject.toml
live1/: introducao.py
live2/: introducao.py
live3/: desafio_chaos.py  desafio_chaos_parallel.py
live4/: desafio_chaos_parallel.py  echobot.py  telegram_bot.py  timerbot.py
